--- a/CochesServlets/src/main/webapp/WEB-INF/web.xml
+++ b/CochesServlets/src/main/webapp/WEB-INF/web.xml
@@ -1,14 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:web="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+<web-app xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance" xmlns:web="https://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="https://xmlns.jcp.org/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
   <display-name>Archetype Created Web Application</display-name>
-  <servlet>
-    <description></description>
-    <display-name>CochesServlet</display-name>
-    <servlet-name>CochesServlet</servlet-name>
-    <servlet-class>com.daniel.coches.controller.CochesServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>CochesServlet</servlet-name>
-    <url-pattern>/CochesServlet</url-pattern>
-  </servlet-mapping>
 </web-app>
