--- a/Vegas-tiendaSpring/pom.xml
+++ b/Vegas-tiendaSpring/pom.xml
@@ -56,6 +56,7 @@
 	</dependencies>
 
 	<build>
+	 	<finalName>tienda</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
