--- a/vegas-tiendaServlets/src/main/webapp/WEB-INF/web.xml
+++ b/vegas-tiendaServlets/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee web-app_5_0.xsd" version="5.0">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee web-app_5_0.xsd" version="5.0">
   <display-name>Archetype Created Web Application</display-name>
-  
+  <servlet>
+    <description></description>
+    <display-name>ActualizarProductoController</display-name>
+    <servlet-name>ActualizarProductoController</servlet-name>
+    <servlet-class>com.daniel.tienda.controlador.actualizar.ActualizarProductoController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ActualizarProductoController</servlet-name>
+    <url-pattern>/ActualizarProductoController</url-pattern>
+  </servlet-mapping>
 </web-app>
