--- a/Vegas-tiendaSpring/src/main/resources/application.properties
+++ b/Vegas-tiendaSpring/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.datasource.url:jdbc:mysql://localhost:3306/tienda?serverTimezone=UTC
 spring.datasource.username:root
 spring.datasource.password:PracticaRoot
 spring.datasource.driver-class-name:com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.naming.physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
